# MatchLayer

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.kiro/hooks/: land-changes-on-main.kiro.hook
.kiro/specs/frontend-redesign/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/phase-1-auth/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/phase-1-foundation/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/phase-1-learning-docs/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/phase-1-matching/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/seo-foundation/: .config.kiro  requirements.md
.kiro/steering/: adrs.md  conventions.md  design.md  phase-1-mvp.md  phase-2-nlp-embeddings.md  phase-3-llm-layer.md  phase-4-agentic.md  phase-5-evaluation.md  phase-6-aws-production.md  phase-7-saas.md  product.md  security.md  seo.md  structure.md  tech.md
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0000_baseline.py  0001_users_and_auth.py  0002_resumes_and_matches.py
apps/api/src/matchlayer_api/: config.py  main.py
apps/api/src/matchlayer_api/api/: __init__.py  health.py
apps/api/src/matchlayer_api/api/matches/: __init__.py  router.py  schemas.py
apps/api/src/matchlayer_api/api/resumes/: __init__.py  router.py  schemas.py
apps/api/src/matchlayer_api/auth/: __init__.py  router.py  schemas.py
apps/api/src/matchlayer_api/core/: __init__.py  db.py  dependencies.py  errors.py  logging.py  middleware.py  mime.py  rate_limit.py  storage.py
apps/api/src/matchlayer_api/core/security/: __init__.py  cookies.py  jwt.py  password_blocklist.txt  passwords.py
apps/api/src/matchlayer_api/db/: __init__.py  models.py
apps/api/src/matchlayer_api/dev/: __init__.py  reset_links.py  router.py
apps/api/src/matchlayer_api/ml/: __init__.py  scorer_adapter.py
apps/api/src/matchlayer_api/scoring/: __init__.py  keyword_analyzer.py  lexicon.py  scorer.py  suggestions.py
apps/api/src/matchlayer_api/scoring/data/: __init__.py
apps/api/src/matchlayer_api/services/: __init__.py  audit.py  auth.py  extraction.py  matching.py  resumes.py
apps/api/src/matchlayer_api/tools/: __init__.py  dump_openapi.py
apps/api/tests/: conftest.py  test_db.py  test_errors.py  test_health.py  test_main.py  test_middleware.py
apps/api/tests/integration/: _cookies.py  conftest.py  test_audit_events_role_grants.py  test_logging_redaction.py  test_login.py  test_logout.py  test_matches_api.py  test_me.py  test_migration_0002_schema.py  test_password_reset.py  test_rate_limit_and_quota_api.py  test_refresh.py  test_register.py  test_resumes_api.py
apps/api/tests/property/: test_analyzed_set_boundedness.py  test_api_noindex_header.py  test_breakdown_consistency.py  test_descending_weight_ordering.py  test_email_normalization.py  test_empty_input_zero_score.py  test_extraction_fail_soft.py  test_extraction_truncation_counting.py  test_filename_free_storage_keys.py  test_jwt_roundtrip.py  test_keyed_mutation_idempotency.py  test_keyword_partition.py  test_lexicon_alias_interchangeability.py  test_match_response_shape.py  test_matched_keyword_soundness.py  test_mime_magic_byte_rejection.py  test_ordered_complete_pagination.py  test_password_roundtrip.py  test_per_user_scoping.py  test_rate_limit_window.py  test_refresh_family.py  test_resume_response_shape.py  test_score_boundedness.py  test_scoring_determinism.py  test_soft_delete_idempotency.py  test_suggestion_boundedness_provenance.py  test_suggestion_determinism.py  test_suggestion_empty_missing_affirmative.py
apps/api/tests/timing/: test_login_timing_local.py
apps/api/tests/unit/: test_audit_payloads_no_pii.py  test_cookies.py  test_dev_reset_links.py  test_extraction_failures.py  test_eyeball_examples.py  test_import_boundaries.py  test_jwt.py  test_lexicon.py  test_matching_config_and_errors.py  test_mime.py  test_passwords.py  test_rate_limit.py  test_scorer_adapter_delegation.py  test_storage.py  test_suggestions.py  test_user_rate_limit_and_idempotency.py
apps/web/: README.md  components.json  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/: proxy.ts
apps/web/tests/: a11y.test.tsx  auth-card.test.tsx  authenticated-shell.test.tsx  contrast.test.ts  globals-tokens.test.ts  library-page.test.tsx  login-form.test.tsx  non-indexing.test.ts  proxy.test.ts  register-form.test.tsx  results-page.test.tsx  sitemap.test.ts  theme-provider.test.tsx  upload-page.test.tsx  use-auth.test.tsx
docs/: costs.md
docs/adr/: 0001-phasing-strategy.md  0002-monorepo-layout.md  0003-cdk-over-terraform.md  0004-pgvector-vs-dedicated-vector-db.md  0005-package-managers.md  0006-seo-and-indexing-policy.md  README.md
docs/learning/: CONVENTIONS.md  README.md
docs/learning/phase-1/: 01-foundations-01-monorepo-layout.md  01-foundations-02-pnpm-and-workspaces.md  01-foundations-03-uv-python-package-manager.md  01-foundations-04-language-version-pinning.md  01-foundations-05-root-package-and-tsconfig.md  01-foundations-06-editorconfig.md  01-foundations-07-lockfiles-and-frozen-installs.md  01-foundations-08-env-files-and-drift-detection.md  01-foundations-09-pre-commit-hooks.md  01-foundations-10-corepack-and-packagemanager-pin.md  01-foundations-11-nextjs-standalone-build.md  02-frontend-01-nextjs-app-router-and-rsc.md  02-frontend-02-typescript-strict-mode.md  (+88 more)
docs/runbooks/: contributing-flow.md  repo-setup.md
infra/docker/: api.Dockerfile  web.Dockerfile
ml/lexicon/: skill_lexicon.v1.json
ml/pipelines/: build_skill_lexicon.py
tools/: _ldc_filter.py  check_env_drift.py  check_lexicon_drift.py  learning_docs_check.py  pyproject.toml
tools/dev/: run_tests.sh  smoke_15_1.sh  smoke_15_1_run.sh
tools/tests/: test_learning_docs_check.py
(+92 files in other folders)
